добавление GET /user эндпоинта