@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,12 +37,11 @@ public class TaskService {
                 .build();
     }
 
-    // ИСПОЛЬЗУЕМ findByUserId
     public List<TaskResponse> getAllTasks() {
         User user = getCurrentUser();
         return taskRepository.findByUserId(user.getId()).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TaskResponse createTask(TaskRequest request) {
